--- a/starter_code/backend/requirements.txt
+++ b/starter_code/backend/requirements.txt
@@ -1,7 +1,9 @@
 astroid==2.2.5
 Click==7.0
+colorama==0.4.4
 ecdsa==0.13.2
-Flask==1.0.2
+Flask==1.0.3
+Flask-Cors==3.0.8
 Flask-SQLAlchemy==2.4.0
 future==0.17.1
 isort==4.3.18
@@ -10,12 +12,13 @@ Jinja2==2.10.1
 lazy-object-proxy==1.4.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
+psycopg2-binary==2.8.6
+psycopg2-pool==1.1
 pycryptodome==3.3.1
 pylint==2.3.1
 python-jose-cryptodome==1.3.2
 six==1.12.0
-SQLAlchemy==1.3.3
-typed-ast==1.3.5
-Werkzeug==0.15.2
+SQLAlchemy==1.3.4
+typed-ast==1.4.1
+Werkzeug==0.15.5
 wrapt==1.11.1
-Flask-Cors==3.0.8
